--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Personal blog",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "shortcut-144x144",
       "sizes": "144x144 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
