--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,17 @@
   "name": "Personal blog",
   "icons": [
     {
-      "src": "shortcut-144x144.ico",
-      "sizes": "144x144 64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/person/icons/favicon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/person/icons/favicon-144x144.png",
+      "sizes": "64x64",
+      "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/person/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
