--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/person/",
+  "start_url": "https://libbgit.github.io/person/index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
