--- a/=====项目=====/package.json
+++ b/=====项目=====/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "my-react-app",
+  "name": "person",
+  "homepage": "https://libbgit.github.io/person/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "animate.css": "^3.7.0",
-    "antd": "^3.13.2",
+    "antd": "^3.18.1",
     "axios": "^0.18.0",
-    "html-loader": "^0.5.5",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
-    "markdown-loader": "^5.0.0",
-    "markdown-to-jsx": "^6.9.1",
-    "node-sass": "^4.11.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
-    "react-router-config": "^4.4.0-beta.6",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "react-scripts-rewired": "^2.1.3",
-    "react-transition-group": "^2.5.3",
-    "redux": "^4.0.1",
-    "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "mathjs": "^5.10.0",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
+    "raw-loader": "^2.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-config": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,10 +31,24 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "babel-preset-mobx": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^5.0.0",
+    "markdown-to-jsx": "^6.9.4",
+    "mobx-react-devtools": "^6.1.1",
+    "node-sass": "^4.12.0"
+  }
 }
