--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,8 @@
   "start_url": "https://libbgit.github.io/person/index.html",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "related_applications":{
+    "prefer_related_applications":true
+  }
 }
